--- a/config/crd/bases/cluster.x-k8s.io_clusters.yaml
+++ b/config/crd/bases/cluster.x-k8s.io_clusters.yaml
@@ -1078,7 +1078,9 @@ spec:
                                       x-kubernetes-int-or-string: true
                                   type: object
                                 type:
-                                  description: Type of deployment. Default is RollingUpdate.
+                                  description: Type of deployment. Allowed values
+                                    are RollingUpdate and OnDelete. The default is
+                                    RollingUpdate.
                                   enum:
                                   - RollingUpdate
                                   - OnDelete
