--- a/hack/observability/parca/values.yaml
+++ b/hack/observability/parca/values.yaml
@@ -10,6 +10,13 @@ server:
   scrapeConfigs:
   - job_name: 'capi-providers'
     scrape_interval: 1m
+    scheme: https
+    authorization:
+      type: Bearer
+      credentials_file: /var/run/secrets/kubernetes.io/serviceaccount/token
+    tls_config:
+      ca_file: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
+      insecure_skip_verify: true
     kubernetes_sd_configs:
     - role: pod
     relabel_configs:
