--- a/hack/observability/prometheus/values.yaml
+++ b/hack/observability/prometheus/values.yaml
@@ -27,6 +27,13 @@ extraScrapeConfigs: |
     # 15s is a bit often for production but helps to get metrics quicker for development.
     scrape_interval: 15s
     metrics_path: /metrics
+    scheme: https
+    authorization:
+      type: Bearer
+      credentials_file: /var/run/secrets/kubernetes.io/serviceaccount/token
+    tls_config:
+      ca_file: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
+      insecure_skip_verify: true
     kubernetes_sd_configs:
       - role: pod
 
