--- a/test/infrastructure/inmemory/config/manager/manager.yaml
+++ b/test/infrastructure/inmemory/config/manager/manager.yaml
@@ -20,7 +20,8 @@ spec:
         - /manager
         args:
         - "--leader-elect"
-        - "--metrics-bind-addr=localhost:8080"
+        - "--diagnostics-address=${CAPI_DIAGNOSTICS_ADDRESS:=:8443}"
+        - "--insecure-diagnostics=${CAPI_INSECURE_DIAGNOSTICS:=false}"
         image: controller:latest
         name: manager
         env:
@@ -31,6 +32,9 @@ spec:
         ports:
         - containerPort: 9440
           name: healthz
+          protocol: TCP
+        - containerPort: 8443
+          name: metrics
           protocol: TCP
         readinessProbe:
           httpGet:
