--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -79,6 +79,10 @@ updates:
   schedule:
     interval: "weekly"
     day: "wednesday"
+  ## group all dependencies with a k8s.io prefix into a single PR.
+  groups:
+    kubernetes:
+      patterns: [ "k8s.io/*" ]
   ignore:
     # Ignore controller-runtime as its upgraded manually.
     - dependency-name: "sigs.k8s.io/controller-runtime"
