--- a/test/infrastructure/docker/config/crd/kustomization.yaml
+++ b/test/infrastructure/docker/config/crd/kustomization.yaml
@@ -25,6 +25,7 @@ patchesStrategicMerge:
   - patches/webhook_in_dockermachinetemplates.yaml
   - patches/webhook_in_dockerclusters.yaml
   - patches/webhook_in_dockerclustertemplates.yaml
+  - patches/webhook_in_dockermachinepooltemplates.yaml
   # +kubebuilder:scaffold:crdkustomizewebhookpatch
   # [CERTMANAGER] To enable webhook, uncomment all the sections with [CERTMANAGER] prefix.
   # patches here are for enabling the CA injection for each CRD
@@ -33,6 +34,7 @@ patchesStrategicMerge:
   - patches/cainjection_in_dockermachinetemplates.yaml
   - patches/cainjection_in_dockerclusters.yaml
   - patches/cainjection_in_dockerclustertemplates.yaml
+  - patches/cainjection_in_dockermachinepooltemplates.yaml
 # +kubebuilder:scaffold:crdkustomizecainjectionpatch
 
 # the following config is for teaching kustomize how to do kustomization for CRDs.
