ClusterClass: Introduce NamingStrategy and allow generating names using go templates

--- a/config/crd/bases/cluster.x-k8s.io_clusterclasses.yaml
+++ b/config/crd/bases/cluster.x-k8s.io_clusterclasses.yaml
@@ -587,6 +587,22 @@ spec:
                           More info: http://kubernetes.io/docs/user-guide/labels'
                         type: object
                     type: object
+                  namingStrategy:
+                    description: NamingStrategy allows changing the naming pattern
+                      used when creating the control plane provider object.
+                    properties:
+                      template:
+                        description: 'Template defines the template to use for generating
+                          the name of the ControlPlane object. If not defined, it
+                          will fallback to `{{ .cluster.name }}-{{ .random }}`. If
+                          the templated string exceeds 63 characters, it will be trimmed
+                          to 58 characters and will get concatenated with a random
+                          suffix of length 5. The templating mechanism provides the
+                          following arguments: * `.cluster.name`: The name of the
+                          cluster object. * `.random`: A random alphanumeric string,
+                          without vowels, of length 5.'
+                        type: string
+                    type: object
                   nodeDeletionTimeout:
                     description: 'NodeDeletionTimeout defines how long the controller
                       will attempt to delete the Node that the Machine hosts after
@@ -1156,6 +1172,25 @@ spec:
                             using this MachineDeploymentClass.'
                           format: int32
                           type: integer
+                        namingStrategy:
+                          description: NamingStrategy allows changing the naming pattern
+                            used when creating the MachineDeployment.
+                          properties:
+                            template:
+                              description: 'Template defines the template to use for
+                                generating the name of the MachineDeployment object.
+                                If not defined, it will fallback to `{{ .cluster.name
+                                }}-{{ .machineDeployment.topologyName }}-{{ .random
+                                }}`. If the templated string exceeds 63 characters,
+                                it will be trimmed to 58 characters and will get concatenated
+                                with a random suffix of length 5. The templating mechanism
+                                provides the following arguments: * `.cluster.name`:
+                                The name of the cluster object. * `.random`: A random
+                                alphanumeric string, without vowels, of length 5.
+                                * `.machineDeployment.topologyName`: The name of the
+                                MachineDeployment topology (Cluster.spec.topology.workers.machineDeployments[].name).'
+                              type: string
+                          type: object
                         nodeDeletionTimeout:
                           description: 'NodeDeletionTimeout defines how long the controller
                             will attempt to delete the Node that the Machine hosts
