--- a/test/e2e/data/infrastructure-docker/main/cluster-template-upgrades-runtimesdk/cluster-runtimesdk.yaml
+++ b/test/e2e/data/infrastructure-docker/main/cluster-template-upgrades-runtimesdk/cluster-runtimesdk.yaml
@@ -26,6 +26,15 @@ spec:
           nodeDeletionTimeout: "30s"
           replicas: ${WORKER_MACHINE_COUNT}
           failureDomain: fd4
+      machinePools:
+        - class: "default-worker"
+          name: "mp-0"
+          nodeDeletionTimeout: "30s"
+          nodeVolumeDetachTimeout: "5m"
+          minReadySeconds: 5
+          replicas: ${WORKER_MACHINE_COUNT}
+          failureDomains:
+          - fd4
     variables:
       - name: kubeadmControlPlaneMaxSurge
         value: "1"
