--- a/config/crd/bases/cluster.x-k8s.io_machinesets.yaml
+++ b/config/crd/bases/cluster.x-k8s.io_machinesets.yaml
@@ -487,10 +487,22 @@ spec:
                 format: int32
                 type: integer
               replicas:
-                default: 1
-                description: Replicas is the number of desired replicas. This is a
-                  pointer to distinguish between explicit zero and unspecified. Defaults
-                  to 1.
+                description: "Replicas is the number of desired replicas. This is
+                  a pointer to distinguish between explicit zero and unspecified.
+                  \n Defaults to: * if the Kubernetes autoscaler min size and max
+                  size annotations are set: - if it's a new MachineSet, use min size
+                  - if the replicas field of the old MachineSet is < min size, use
+                  min size - if the replicas field of the old MachineSet is > max
+                  size, use max size - if the replicas field of the old MachineSet
+                  is in the (min size, max size) range, keep the value from the oldMS
+                  * otherwise use 1 Note: Defaulting will be run whenever the replicas
+                  field is not set: * A new MachineSet is created with replicas not
+                  set. * On an existing MachineSet the replicas field was first set
+                  and is now unset. Those cases are especially relevant for the following
+                  Kubernetes autoscaler use cases: * A new MachineSet is created and
+                  replicas should be managed by the autoscaler * An existing MachineSet
+                  which initially wasn't controlled by the autoscaler should be later
+                  controlled by the autoscaler"
                 format: int32
                 type: integer
               selector:
