--- a/test/e2e/data/shared/v1.6/metadata.yaml
+++ b/test/e2e/data/shared/v1.6/metadata.yaml
@@ -2,6 +2,12 @@ apiVersion: clusterctl.cluster.x-k8s.io/v1alpha3
 kind: Metadata
 releaseSeries:
   - major: 1
+    minor: 6
+    contract: v1beta1
+  - major: 1
+    minor: 5
+    contract: v1beta1
+  - major: 1
     minor: 4
     contract: v1beta1
   - major: 1
@@ -19,9 +25,3 @@ releaseSeries:
   - major: 0
     minor: 4
     contract: v1alpha4
-  - major: 0
-    minor: 3
-    contract: v1alpha3
-  - major: 0
-    minor: 2
-    contract: v1alpha2
