--- a/test/infrastructure/docker/config/crd/bases/infrastructure.cluster.x-k8s.io_dockermachinetemplates.yaml
+++ b/test/infrastructure/docker/config/crd/bases/infrastructure.cluster.x-k8s.io_dockermachinetemplates.yaml
@@ -159,6 +159,11 @@ spec:
                     description: Spec is the specification of the desired behavior
                       of the machine.
                     properties:
+                      bootstrapTimeout:
+                        description: BootstrapTimeout is the total amount of time
+                          to wait for the machine to bootstrap before timing out.
+                          The default value is 3m.
+                        type: string
                       bootstrapped:
                         description: "Bootstrapped is true when the kubeadm bootstrapping
                           has been run against this machine \n Deprecated: This field
